tests/res/has/error_spec_not_type.say
say shape = { x: 1 };
say v = 1;
v has shape; // error: 'shape' is not a type or trait
